unpackaged/main/default/objects/Etapa_Judicial__c/Etapa_Judicial__c.object-meta.xml
<CustomObject>
    <label>Etapa Judicial</label>
    <nameField>
        <displayFormat>EJ-{00000000}</displayFormat>
        <label>Nombre de Etapa Judicial</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Etapas Judiciales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>