unpackaged/main/default/objects/Etapa_Judicial__c/fields/Asunto__c.field-meta.xml
<CustomField>
    <fullName>Asunto__c</fullName>
    <label>Asunto</label>
    <referenceTo>Asunto__c</referenceTo>
    <relationshipLabel>Etapas Judiciales</relationshipLabel>
    <relationshipName>Etapas_Judiciales</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>