unpackaged/main/default/objects/Etapa_Judicial__c/fields/Codigo_de_Resultado__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_Resultado__c</fullName>
    <label>Código de Resultado</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Etapa_Judicial__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>10 - Asignación a Externo</fullName>
                <label>10 - Enviada a Corresponsal</label>
            </value>
            <value>
                <fullName>AD - Rechazo de la demanda</fullName>
            </value>
            <value>
                <fullName>20 - Aclaración de la demanda</fullName>
                <label>20 - Presentada en Oficialía de Partes</label>
            </value>
            <value>
                <fullName>4A - Prevención para admisión de la demanda</fullName>
            </value>
            <value>
                <fullName>5A - Desahogo Prev. para admisión de demanda</fullName>
            </value>
            <value>
                <fullName>6A - Pendiente radicación de la demanda</fullName>
            </value>
            <value>
                <fullName>7A - Incompetencia del Juez</fullName>
            </value>
            <value>
                <fullName>8A - Demanda Admitida</fullName>
            </value>
            <value>
                <fullName>9A - Desechamiento de la de la demanda</fullName>
            </value>
            <value>
                <fullName>0A - Instructivo en Elaboración</fullName>
            </value>
            <value>
                <fullName>1B - Despecho / Exhorto Elabora y Presenta</fullName>
            </value>
            <value>
                <fullName>2B - Despacho / Exhorto Dilig. - Devolución</fullName>
            </value>
            <value>
                <fullName>3B - Desig. Actuario / Not. Encarga Actuario</fullName>
            </value>
            <value>
                <fullName>4B - Cita para Realizar Emplazamiento</fullName>
            </value>
            <value>
                <fullName>5B - Diligencia de Emplazamiento</fullName>
            </value>
            <value>
                <fullName>6B - Diligencia no Realizada</fullName>
            </value>
            <value>
                <fullName>7B - DNR por Inasistencia de Funcionario</fullName>
            </value>
            <value>
                <fullName>8B - DNR por no Encontrarse Persona Alguna</fullName>
            </value>
            <value>
                <fullName>9B - DNR por no ser Domicilio del Demandado</fullName>
            </value>
            <value>
                <fullName>0B - DNR por haber solo Menores de Edad</fullName>
            </value>
            <value>
                <fullName>30 - DNR por Negarse a Recibir Notificación</fullName>
            </value>
            <value>
                <fullName>40 - Emplazamiento Parcial</fullName>
            </value>
            <value>
                <fullName>3C - Autoriza Días/Horas Inhábil x Emplazar</fullName>
            </value>
            <value>
                <fullName>4C - Se Señala Nuevo Domicilio para Emplazar</fullName>
            </value>
            <value>
                <fullName>5C - Notificación y Emplazamiento Efectuado</fullName>
            </value>
            <value>
                <fullName>6C - Solicita Pesquisas Autoridades</fullName>
            </value>
            <value>
                <fullName>7C - Obtención de Oficios x Pesquisas</fullName>
            </value>
            <value>
                <fullName>8C - Presenta Oficios Pesquisas/se Razonan</fullName>
            </value>
            <value>
                <fullName>9C - Respuesta a Oficio de Localización</fullName>
            </value>
            <value>
                <fullName>0C - Ilocalizada No Emplazada / No Litis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>