unpackaged/main/default/objects/Etapa_Judicial__c/fields/Etapa_Judicial__c.field-meta.xml
<CustomField>
    <fullName>Etapa_Judicial__c</fullName>
    <label>Etapa Judicial</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Demanda</fullName>
            </value>
            <value>
                <fullName>Notificación y emplazamiento personal en trámite</fullName>
            </value>
            <value>
                <fullName>Deudor ilocalizado en emplazamiento</fullName>
            </value>
            <value>
                <fullName>Not. y Emplazam. por edictos en tramite</fullName>
            </value>
            <value>
                <fullName>Contestación a la demanda</fullName>
            </value>
            <value>
                <fullName>Embargo antes de Sentencia</fullName>
            </value>
            <value>
                <fullName>Pruebas</fullName>
            </value>
            <value>
                <fullName>Solicitud se dicte sentencia definitiva</fullName>
            </value>
            <value>
                <fullName>Apelación</fullName>
            </value>
            <value>
                <fullName>Amparo directo</fullName>
            </value>
            <value>
                <fullName>Ejecución de Sentencia</fullName>
            </value>
            <value>
                <fullName>Ejecución de Convenio</fullName>
            </value>
            <value>
                <fullName>Remate de Bienes</fullName>
            </value>
            <value>
                <fullName>Audiencia de Remate</fullName>
            </value>
            <value>
                <fullName>Escrituración en Trámite</fullName>
            </value>
            <value>
                <fullName>Toma posesión bien adjudicado y/o arrendado</fullName>
            </value>
            <value>
                <fullName>Incidente / Tercería</fullName>
            </value>
            <value>
                <fullName>Cierre de Juicio</fullName>
            </value>
            <value>
                <fullName>Para Dictamen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>