unpackaged/main/default/objects/Etapa_Judicial__c/fields/Fecha_de_Etapa_Judicial__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Etapa_Judicial__c</fullName>
    <label>Fecha de Etapa Judicial</label>
    <required>true</required>
    <type>Date</type>
</CustomField>